PATCH, DEL, PUT, POST Check